--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,12 +84,17 @@ jobs:
     - name: Prepare release assets
       run: |
         mkdir -p release
+        echo "=== Copying all artifacts to release directory ==="
         for dir in artifacts/*/; do
           if [ -d "$dir" ]; then
             echo "Processing directory: $dir"
-            find "$dir" -maxdepth 1 -type f \( -executable -o -name "*.exe" \) -exec cp {} release/ \;
+            find "$dir" -maxdepth 1 -type f -exec cp {} release/ \;
           fi
         done
+        
+        echo "=== Setting executable permissions ==="
+        chmod +x release/* 2>/dev/null || true
+        
         echo "=== Release directory contents ==="
         ls -lh release/
     
