--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,11 +84,28 @@ jobs:
     - name: Prepare release assets
       run: |
         mkdir -p release
-        echo "=== Copying all artifacts to release directory ==="
+        echo "=== Copying and renaming artifacts ==="
+        
         for dir in artifacts/*/; do
           if [ -d "$dir" ]; then
-            echo "Processing directory: $dir"
-            find "$dir" -maxdepth 1 -type f -exec cp {} release/ \;
+            dirname=$(basename "$dir")
+            echo "Processing directory: $dirname"
+            
+            for file in "$dir"*; do
+              if [ -f "$file" ]; then
+                filename=$(basename "$file")
+                echo "Found file: $filename"
+                
+                if [[ "$dirname" == *"windows"* ]]; then
+                  new_name="${dirname}.exe"
+                else
+                  new_name="$dirname"
+                fi
+                
+                echo "Copying $filename to $new_name"
+                cp "$file" "release/$new_name"
+              fi
+            done
           fi
         done
         
