--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,17 +17,17 @@ jobs:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             artifact_name: vless
-            asset_name: vl-222-windows-amd64
+            asset_name: vless-rust-windows-amd64
             link_type: dynamic
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: vless
-            asset_name: vl-222-linux-amd64
+            asset_name: vless-rust-linux-amd64
             link_type: static
           - os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             artifact_name: vless
-            asset_name: vl-222-linux-arm64
+            asset_name: vless-rust-linux-arm64
             link_type: static
 
     steps:
